# volumecrypt-kit

./: .gitattributes  .gitignore  AGENTS.md  ARCH.md  Cargo.toml  Makefile  README.md  TODO.md  go.mod  go.sum
.ci/scripts/: load-wdk-env.sh  vagrant-extract-qcow2.sh
.github/workflows/: ci.yml  cicd.yml
docs/: architecture.md  boot-and-encryption-flow.md  build-and-test.md  jvck-format.md
lib/common/: Cargo.toml
lib/common/src/: cpu.rs  error.rs  ioctl.rs  lib.rs  rng.rs  store.rs  types.rs  xts.rs
lib/common/src/handover/: mod.rs  payload.rs  reader.rs  writer.rs
lib/common/src/jvck/: codec.rs  metadata.rs  mod.rs  options.rs  store.rs
lib/driver/: Cargo.toml  build.rs
lib/driver/src/: debug.rs  device.rs  executor.rs  handover.rs  io.rs  lib.rs  nt.rs  registry.rs  sweep.rs
lib/driver/src/crypto/: pipeline.rs
lib/driver/src/filter/: context.rs  handover_mount.rs  io.rs  irp.rs  irp_queue.rs  manager.rs  mod.rs  volume_thread.rs
lib/driver/src/ioctl/: codes.rs  dispatch.rs  mod.rs  types.rs
lib/driver/src/offset/: engine.rs
lib/loader/: Cargo.toml
lib/loader/src/: chainload.rs  cpu.rs  debug.rs  handover.rs  lib.rs  provider.rs
lib/loader/src/hook/: block_io.rs  block_io2.rs  mod.rs
lib/windrv/: Cargo.toml  build.rs
lib/windrv/src/: debug.rs  device.rs  executor.rs  handover.rs  io.rs  lib.rs  nt.rs  ntddk_ex.rs  provider.rs  registry.rs  rng.rs
lib/windrv/src/crypto/: aes_xts.rs  mod.rs  pipeline.rs
lib/windrv/src/filter/: context.rs  handover_mount.rs  io.rs  irp.rs  manager.rs  mod.rs  volume_thread.rs
lib/windrv/src/ioctl/: codes.rs  dispatch.rs  mod.rs  types.rs
lib/windrv/src/offset/: engine.rs  mod.rs
sample/app/: main.go
sample/app/cmd/: attach.go  bench.go  decrypt.go  detach.go  encrypt.go  os_volume_encrypt.go  root.go  status.go  volume_info.go
sample/common/: Cargo.toml
sample/common/src/: config.rs  lib.rs  payload.rs
sample/crypto-test/: Cargo.toml  build.rs
sample/crypto-test/src/: lib.rs  tests.rs
sample/driver/: Cargo.toml  vck-sample-driver.inf
sample/driver/src/: lib.rs  provider.rs
sample/loader/: Cargo.toml
sample/loader/src/: main.rs  provider.rs
sample/windrv/: Cargo.toml  vck-sample-driver.inf
sample/windrv/src/: lib.rs  provider.rs
sdk/: client.go  ioctl.go  jvck.go  jvck_test.go  jvck_windows.go  progress.go  types.go  volume_windows.go
testing/images/: make-volume-d.ps1  windows-11.yaml
testing/ovmf/: OVMF_CODE_4M.fd  OVMF_CODE_4M.secboot.fd  OVMF_VARS_4M.fd
testing/recipes/data-volume/: data-volume.yaml
testing/recipes/data-volume-decrypt/: data-volume-decrypt.yaml
testing/recipes/driver-load/: driver-load.yaml
testing/recipes/os-encrypt/: os-encrypt.yaml
testing/recipes/os-handover/: os-handover.yaml
testing/recipes/os-volume-prepare/: os-volume-prepare.yaml
testing/signing/: .gitignore  generate.sh  sign-driver-package.ps1  sign-driver.ps1
