# SPDX-FileCopyrightText: 2026 JC-Lab <joseph@jc-lab.net>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vck-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, JVCK metadata format, and crypto primitives for VolumeCrypt-Kit"

[features]
default = ["std"]
std = []
uefi = ["dep:uefi"]

[dependencies]
aes.workspace = true
cbc.workspace = true
cipher.workspace = true
crc.workspace = true
hkdf.workspace = true
hmac.workspace = true
irql.workspace = true
messagepack-serde = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
sha2.workspace = true
spin = { workspace = true, features = ["once"] }
thiserror = { workspace = true, default-features = false }
uuid = { workspace = true, default-features = false }
xts-mode.workspace = true
zeroize.workspace = true
uefi = { version = "0.37", default-features = false, optional = true }
