[package]
name = "vck-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
std = []
debugcon = []

[dependencies]
aes.workspace = true
irql.workspace = true
messagepack-serde = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
xts-mode.workspace = true
vck-common = { path = "../common", default-features = false }
wdk-sys = "0.5.1"
