[package]
name = "vck-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vck-common = { path = "../common", default-features = false, features = ["uefi"] }
uefi = { version = "0.37", default-features = false }
# Raw protocol structs (BlockIoProtocol) for vtable patching in the read hook.
uefi-raw = "0.14"

# AES-XTS volume decryption for the transparent Block IO read hook.
aes.workspace = true
xts-mode.workspace = true
