# SPDX-FileCopyrightText: 2026 JC-Lab <joseph@jc-lab.net>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vck-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UEFI pre-boot loader framework for VolumeCrypt-Kit"

[dependencies]
vck-common = { workspace = true, default-features = false, features = ["uefi"] }

log = { workspace = true, default-features = false }
uefi = { version = "0.37", default-features = false }
# Raw protocol structs (BlockIoProtocol) for vtable patching in the read hook.
uefi-raw = "0.14"

# AES-XTS volume decryption for the transparent Block IO read hook.
aes.workspace = true
xts-mode.workspace = true
