# SPDX-FileCopyrightText: 2026 JC-Lab <joseph@jc-lab.net>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vck-windrv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows kernel-mode driver framework for VolumeCrypt-Kit"

[build-dependencies]
wdk-build.workspace = true

[features]
default = []
std = []
debugcon = []

[dependencies]
vck-common = { workspace = true, default-features = false }

aes.workspace = true
irql.workspace = true
messagepack-serde = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_bytes = { workspace = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
xts-mode.workspace = true
wdk-sys = "0.5.1"
