[package]
name = "vck-crypto-test-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[build-dependencies]
wdk-build.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
vck-common = { path = "../../lib/common", default-features = false }
vck-driver = { path = "../../lib/windrv" }
wdk-alloc.workspace = true
wdk-sys = "0.5.1"
