[package]
name = "vck-sample-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[build-dependencies]
wdk-build.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Forwards driver DbgPrint output to the isa-debugcon port (0xe9) so it can be
# captured to a file during VM testing. Off by default (signed release builds).
debugcon = ["vck-driver/debugcon"]

[dependencies]
spin = { workspace = true, features = ["lazy", "once", "mutex", "spin_mutex"] }
vck-common = { path = "../../lib/common", default-features = false }
vck-driver = { path = "../../lib/driver" }
vck-sample-common = { path = "../common" }
wdk-alloc.workspace = true
wdk-sys = "0.5.1"
