[package]
name = "vck-sample-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vck-sample-loader"
path = "src/main.rs"

[dependencies]
vck-loader = { path = "../../lib/loader" }
vck-common = { path = "../../lib/common", default-features = false, features = ["uefi"] }
vck-sample-common = { path = "../common", features = ["uefi"] }
uefi = { version = "0.37", default-features = false }
