# SPDX-FileCopyrightText: 2026 JC-Lab <joseph@jc-lab.net>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vck-sample-loader"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vck-sample-loader"
path = "src/main.rs"

[dependencies]
vck-loader = { path = "../../lib/loader" }
vck-common = { path = "../../lib/common", default-features = false, features = ["uefi"] }
vck-sample-common = { path = "../common", features = ["uefi"] }
uefi = { version = "0.38", default-features = false, features = ["alloc", "global_allocator", "panic_handler", "logger"] }
log = { version = "0.4", default-features = false }
