# SPDX-FileCopyrightText: 2026 JC-Lab <joseph@jc-lab.net>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vck-sample-driver"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[build-dependencies]
wdk-build.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
# Always enable debugcon so VM test logs are always captured.
default = ["debugcon"]
debugcon = ["vck-windrv/debugcon"]

[dependencies]
spin = { workspace = true, features = ["lazy", "once", "mutex", "spin_mutex"] }
vck-common = { path = "../../lib/common", default-features = false }
vck-windrv = { path = "../../lib/windrv" }
vck-sample-common = { path = "../common" }
wdk-alloc.workspace = true
wdk-sys = "0.5.1"
